# ax_tts_api

./: .gitignore  CMakeLists.txt  README.md  download_models.sh  main.cpp
cmake/: msp_dependencies.cmake  third_party.cmake
scripts/: test_espeak.py
src/api/: ax_tts_api.cpp  ax_tts_api.h
src/ax_model_runner/: ax_model_runner.cpp  ax_model_runner.hpp
src/tts/: kokoro.cpp  kokoro.hpp  tts_factory.hpp  tts_frontend.hpp  tts_interface.hpp
src/utils/: ax_engine_guard.cpp  ax_engine_guard.hpp  base64.cpp  base64.h  g2p.hpp  logger.h  memory_utils.cpp  memory_utils.hpp  resample.cpp  resample.h  string_utils.cpp  string_utils.hpp  text_cleaner.hpp  text_normalizer.hpp  timer.hpp
src/utils/g2p/: EnEspeakG2P.hpp  EspeakG2P.cpp  EspeakG2P.hpp  Punctuator.hpp  ZhEspeakG2P.hpp  en-espeak-g2p.cpp  en-espeak-g2p.hpp  en-g2p.hpp  g2p.hpp
src/utils/librosa/: librosa.h
tests/: CMakeLists.txt  test_cleaner.cpp  test_espeak.cpp  test_kokoro.cpp  test_punctuator.cpp
